--- a/css/styles.css
+++ b/css/styles.css
@@ -74,3 +74,9 @@ button:hover {
 .eraseDisplay {
     display: none;
 }
+
+.messageDiv {
+    text-align: center;
+    color: #050b28;
+    font-size: 25px;
+}
